# micro_ros_setup

config/freertos/b_l4s5i_iot01a/: build.sh  configure.sh  create.sh  flash.sh  package.xml
config/freertos/discovery_b_l4s5i_iot01a/: board.repos  build.sh  configure.sh  create.sh  flash.sh
