<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>firmware</name>
  <version>0.0.0</version>
  <description>Micro-ROS dependencies for FreeRTOS and B-STM32L4S5I-IOT01A</description>
  <maintainer email="michael@eibye.name">Michael Eibye</maintainer>
  <license>APL2</license>

  <build_depend>openocd</build_depend>

</package>
